--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
 debugpy==1.8.12
 decorator==5.2.1
 executing==2.2.0
+fonttools==4.56.0
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.14.0
@@ -23,12 +26,15 @@ ipykernel==6.29.5
 ipython==8.32.0
 jedi==0.19.2
 Jinja2==3.1.5
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 narwhals==1.28.0
@@ -51,6 +57,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 pyzmq==26.2.1
@@ -58,12 +65,15 @@ referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.23.1
+scikit-learn==1.6.1
+scipy==1.15.2
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 stack-data==0.6.3
 streamlit==1.42.2
 tenacity==9.0.0
+threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.2
 traitlets==5.14.3
